--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
 
 
     <form action="" class="form">
-        <input id="title" type="text" placeholder="Title">
-        <input id="author" type="text" placeholder="Author">
-        <input id="pages" type="text" placeholder="Pages" opt>
-        <input id="isRead" type="" placeholder="isRead">
+        <input id="title" type="text" placeholder="Title" required>
+        <input id="author" type="text" placeholder="Author" required>
+        <input id="pages" type="text" placeholder="Pages" required>
+        <select name="" id="">
+            <option value="">Read</option>
+            <option value="">Not read yet</option>
+        </select>
 
         <button type="submit" class="submit">Submit</button>
         <p id="para"></p>
@@ -34,69 +37,6 @@
 
             <div class="populateBook">
                 
-                <div class="book-info">
-                    <h3>Book Title</h3>
-                    <p>Author</p>
-                    <p>Pages</p>
-                    <button>Read</button>
-                    <button>Remove</button>
-                </div>
-                <div class="book-info">
-                    <h3>Book Title</h3>
-                    <p>Author</p>
-                    <p>Pages</p>
-                    <button>Read</button>
-                    <button>Remove</button>
-                </div>
-                <div class="book-info">
-                    <h3>Book Title</h3>
-                    <p>Author</p>
-                    <p>Pages</p>
-                    <button>Read</button>
-                    <button>Remove</button>
-                </div>
-                <div class="book-info">
-                    <h3>Book Title</h3>
-                    <p>Author</p>
-                    <p>Pages</p>
-                    <button>Read</button>
-                    <button>Remove</button>
-                </div>
-                <div class="book-info">
-                    <h3>Book Title</h3>
-                    <p>Author</p>
-                    <p>Pages</p>
-                    <button>Read</button>
-                    <button>Remove</button>
-                </div>
-                <div class="book-info">
-                    <h3>Book Title</h3>
-                    <p>Author</p>
-                    <p>Pages</p>
-                    <button>Read</button>
-                    <button>Remove</button>
-                </div>
-                <div class="book-info">
-                    <h3>Book Title</h3>
-                    <p>Author</p>
-                    <p>Pages</p>
-                    <button>Read</button>
-                    <button>Remove</button>
-                </div>
-                <div class="book-info">
-                    <h3>Book Title</h3>
-                    <p>Author</p>
-                    <p>Pages</p>
-                    <button>Read</button>
-                    <button>Remove</button>
-                </div>
-                <div class="book-info">
-                    <h3>Book Title</h3>
-                    <p>Author</p>
-                    <p>Pages</p>
-                    <button>Read</button>
-                    <button>Remove</button>
-                </div>
                 <div class="book-info">
                     <h3>Book Title</h3>
                     <p>Author</p>
